...
class AlertDialog extends StatelessWidget {
  const AlertDialog({
    super.key,
    required this.title,
    required this.message,
    this.type = AlertType.info,
    this.buttonText = 'OK',
    this.icon,
    this.onPressed,
  });

  final String title;
  final String message;
...
